fixed modal spacing

--- a/css/admin_homepage.css
+++ b/css/admin_homepage.css
@@ -474,7 +474,7 @@ border: 1px solid red;
 
 .modal-content {
   background-color: #fefefe;
-  margin: 10% auto;
+  margin: 8% auto;
   padding: 0px 0px 20px 0px;
   border: 1px solid #888;
   width: 35%;
